# alice-connector

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py
src/connector/: connector.py
