[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alice-connector"
version = "0.0.2"
authors = [{ name = "Thinh Do Duc", email = "dothinh.dev@gmail.com" }]
maintainers = [{ name = "Thinh Do Duc", email = "dothinh.dev@gmail.com" }]
description = "A SQL connector developed by alice"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
  "mysql_connector_repackaged==0.3.1",
  "python-dotenv==1.0.1"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ducthinh-dev/alice-connector"
Issues = "https://github.com/ducthinh-dev/alice-connector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/connector"]